--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "husky": "^7.0.4",
     "jest": "^27.4.7",
+    "lint-staged": "^12.3.2",
     "standard": "^16.0.4"
   }
 }
