--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "jest": "^27.4.7",
     "lint-staged": "^12.3.2",
     "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2",
+    "mongoose": "^6.1.8"
   }
 }
