--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --silent",
-    "test:staged": "jest --passWithNoTests",
+    "test": "jest --watchAll --silent --noStackTrace",
+    "test:staged": "jest --passWithNoTests --silent --noStackTrace",
     "prepare": "husky install"
   },
   "author": "",
