--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --watchAll --silent --noStackTrace",
     "test:staged": "jest --passWithNoTests --silent --noStackTrace",
+    "test:ci": "jest --coverage",
     "prepare": "husky install"
   },
   "author": "",
