move errors to a custom folder

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:ci": "npm test -- --coverage",
     "prepare": "husky install"
   },
+  "standard": {
+    "env": ["jest"]
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
