ensure Encrypter returns false if bcrypt returns false

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "standard": "^16.0.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.8",
     "validator": "^13.7.0"
