--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.2.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "lint-staged": "^12.3.2",
@@ -28,6 +29,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
     "validator": "^13.7.0"
   }
